# linguistic-distance

./: .gitignore  CLAUDE.md  README.md  TESTING.md  VENV_SETUP.md  basic_structure_test.py  pyproject.toml  requirements.txt  setup.py  setup_test_env.py  test_pipeline.py  test_pipeline_minimal.py  verify_test_data.py
examples/: advanced_analysis.py  basic_usage.py
scripts/: compute_distances.py  download_data.py  train_embeddings.py  visualize_results.py
src/: __init__.py
src/alignment/: __init__.py  linear_mapping.py  procrustes.py
src/data/: __init__.py  downloader.py  preprocessor.py
src/distance/: __init__.py  cosine_based.py  earth_movers.py  geometric.py
src/embeddings/: __init__.py  loader.py  trainer.py
src/utils/: __init__.py  io.py  visualization.py
test_output/: test_results.json
tests/: __init__.py
visualizations/: visualization_summary.txt
