[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "linguistic-distance"
version = "0.1.0"
description = "Tools to compare the distance between embedding spaces of monolingual corpora"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Linguistic Distance Project"}
]
keywords = ["linguistics", "embeddings", "nlp", "distance-measurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "gensim>=4.0.0",
    "fasttext>=0.9.2",
    "nltk>=3.6.0",
    "spacy>=3.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.10.0",
    "tqdm>=4.62.0",
    "pot>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
download-data = "scripts.download_data:main"
train-embeddings = "scripts.train_embeddings:main"
compute-distances = "scripts.compute_distances:main"
visualize-results = "scripts.visualize_results:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"